--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,20 @@
+MiniResizer 0.0.8
+    * Improve frame seeking fot TS files
+
+MiniResizer 0.0.7
+    * Add built-in filtergraph expansion for systems lacking wordexp:
+      only variable expansions ($FOO or ${FOO} are supported
+
+MiniResizer 0.0.6
+    * Treat improper uses of "" in filtegraphs as errors
+
+MiniResizer 0.0.5
+    * Add filtergraph expansion on systems providing wordexp
+    * Implement getting the file to open from the command line
+    * Add icons and desktop files for XDG desktops
+
 MiniResizer 0.0.4
-   * Instrumented for the GNU Build System
+    * Instrumented for the GNU Build System
 
 MiniResizer 0.0.3
     * Move preview border settings under a dedicated "visual aids" section
